apps/productivity/wealthfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealthfolio
  namespace: wealthfolio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8088
      targetPort: http
  selector:
    app.kubernetes.io/name: wealthfolio
